cambio ruta base de datos en .env

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_DB = mongodb://localhost:27017/proyectoCliniVetSENA
+MONGO_DB = mongodb+srv://JoseJulian:Joseles10@cluster0.bwv2gqu.mongodb.net/proyectoCliniVetSENA
